cloudify/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: content-type, Authorization, Tenant
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: cloudify
  namespace: permedcoe
spec:
  rules:
    - host: cloudify.croupier.permedcoe.eu
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cfy-manager-test
              port: 
                number: 80
  tls:
  - hosts:
    - cloudify.croupier.permedcoe.eu
    secretName: cloudify.croupier.permedcoe.eu
