cloudify/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cfy-manager-test
  namespace: croupier-services
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: cfy-manager-test
  type: ClusterIP
